Website: fix alignment issue in Handbook mobile navigation (#12224)
Closes: #12218

Changes:
- Updated the alignment of the mobile navigation "breadcrumbs" in the
Fleet handbook.

--- a/website/assets/styles/pages/handbook/basic-handbook.less
+++ b/website/assets/styles/pages/handbook/basic-handbook.less
@@ -59,7 +59,7 @@
     padding-top: 16px;
     p, a, strong {
       font-size: 12px;
-      line-height: 24px;
+      line-height: 18px;
     }
     a {
       text-decoration: none;
